fixed uneven responsiveness of table filter and pagination

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -5,7 +5,7 @@ body {
 }
 
 .fa {
-	color: rgba(255, 255, 255, .60);
+	/*color: rgba(255, 255, 255, .60);*/
 }
 
 .normal-text {
