--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,6 +8,9 @@ body {
 	padding-top:      40px;
 	font-family:      "Lato", "Open Sans", Arial, Helvetica, sans-serif;
 	background-color: #eeeeee;
+	min-width:        1024px;
+	min-height:       100%;
+	height:           100%;
 }
 
 /*
@@ -64,7 +67,15 @@ body {
 
 /* Hide for mobile, show later */
 .sidebar {
-	display: none;
+	/*display: none;*/
+	background-color: #f5f5f5;
+	position:         relative;
+	height:           100%;
+	min-height:       100%;
+	padding:          20px;
+	overflow-x:       hidden;
+	overflow-y:       auto; /* Scrollable contents if viewport is shorter than content. */
+	border-right:     1px solid #eeeeee;
 }
 
 /* Sidebar navigation */
@@ -77,21 +88,6 @@ body {
 .nav-sidebar > li > a {
 	padding-right: 20px;
 	padding-left:  20px;
-}
-
-.nav-sidebar > .active > a,
-.nav-sidebar > .active > a:hover,
-.nav-sidebar > .active > a:focus {
-	color:            #ffffff;
-	background-color: #428bca;
-}
-
-.nav-pills > li.active {
-	background-color: #009587;
-}
-
-.nav-tabs > li:hover, .nav-tabs > .active {
-	background-color: rgba(255, 255, 255, .1);
 }
 
 .tab-header {
@@ -291,46 +287,66 @@ body.body-404 .main {
 /*margin:      0;*/
 /*}*/
 
-/*.dataTables_wrapper .dataTables_filter input {*/
-/*height: 28px;*/
-/*float:  left;*/
-/*}*/
-
 /*.dataTables_wrapper .dataTables_filter i.form-control-feedback {*/
 /*top: 7px;*/
 /*}*/
+
+div.dataTables_filter input {
+	margin-left: 0;
+}
+
+div.dataTables_info {
+	font-size: 11px;
+}
 
 table.dataTable thead th {
 	font-size:   13px;
 	text-shadow: 0 1px 1px #ffffff;
 }
 
-.has-feedback .form-control:focus {
-	padding-right: 42.5px;
+.has-feedback .form-control {
+	padding-right: 0;
+}
+
+.pagination {
+	font-size: 11px;
+}
+
+.pagination > .active > a,
+.pagination > .active > a:focus,
+.pagination > .active > a:hover,
+.pagination > .active > span,
+.pagination > .active > span:focus,
+.pagination > .active > span:hover {
+	z-index:          2;
+	color:            #ffffff;
+	cursor:           default;
+	background-color: rgba(0, 149, 135, 0.8);
+	border-color:     rgba(0, 149, 135, 0.8);
 }
 
 /*------------------------------------------------------------------------------*/
 /* Media Queries                                                                */
 /*------------------------------------------------------------------------------*/
 
-@media (min-width: 768px) {
+@media (min-width: 1024px) {
 	.main {
 		padding-right: 15px;
 		padding-left:  15px;
 	}
 
 	.sidebar {
-		position:         fixed;
-		top:              41px;
-		bottom:           0;
-		left:             0;
-		z-index:          1000;
-		display:          block;
-		padding:          20px;
-		overflow-x:       hidden;
-		overflow-y:       auto; /* Scrollable contents if viewport is shorter than content. */
-		background-color: #f5f5f5;
-		border-right:     1px solid #eeeeee;
+		/*position:         fixed;*/
+		/*top:              41px;*/
+		/*bottom:           0;*/
+		/*left:             0;*/
+		/*z-index:          1000;*/
+		/*display:          block;*/
+		/*padding:          20px;*/
+		/*overflow-x:       hidden;*/
+		/*overflow-y:       auto; /!* Scrollable contents if viewport is shorter than content. *!/*/
+		/*background-color: #f5f5f5;*/
+		/*border-right:     1px solid #eeeeee;*/
 	}
 }
 
